<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.WordyActivity"
    android:id="@+id/main_wordy_layout">

    <TextView
        android:id="@+id/game_status_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wordy"
        android:textSize="24sp"
        android:gravity="center"
        android:paddingBottom="16dp"/>

    <LinearLayout
        android:id="@+id/guess_row_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="4dp">

        <EditText android:id="@+id/box_0_0" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_0_1" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_0_2" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_0_3" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_0_4" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guess_row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="4dp">

        <EditText android:id="@+id/box_1_0" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_1_1" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_1_2" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_1_3" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_1_4" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/guess_row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="4dp">

        <EditText android:id="@+id/box_2_0" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_2_1" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_2_2" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_2_3" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_2_4" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/guess_row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="4dp">

        <EditText android:id="@+id/box_3_0" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_3_1" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_3_2" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_3_3" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_3_4" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/guess_row_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="4dp">

        <EditText android:id="@+id/box_4_0" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_4_1" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_4_2" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_4_3" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_4_4" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/guess_row_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="4dp">

        <EditText android:id="@+id/box_5_0" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_5_1" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_5_2" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_5_3" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
        <EditText android:id="@+id/box_5_4" style="@style/WordyLetterBox"
            tools:ignore="LabelFor" />
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/restart_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restart"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/add_word_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_word_button" />
    </LinearLayout>

</LinearLayout>
